# TrafficVision-AI

./: .env.example  .gitignore  README.md  TrafficVision_AI_Presentation.pptx  docker-compose.yml
backend/: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  alembic.ini  export_to_onnx.py  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py  startup.py
backend/app/analytics/: __init__.py  aggregator.py  cache.py
backend/app/api/: __init__.py
backend/app/api/routes/: analytics.py  analyze.py  health.py  upload.py  violations.py
backend/app/database/: __init__.py  models.py  session.py
backend/app/database/migrations/: env.py
backend/app/database/migrations/versions/: 965fe85d35fd_initial_schema.py  f7d9830da0ab_add_by_date_to_analytics_cache.py
backend/app/detection/: __init__.py  bytetrack_adapter.py  detector.py  models.py  preprocessor.py
backend/app/evidence/: __init__.py  generator.py  uploader.py
backend/app/ocr/: __init__.py  ocr_pipeline.py  postprocessor.py
backend/app/services/: __init__.py  analysis_service.py  image_service.py  storage_service.py  violation_service.py
backend/app/violation_engine/: __init__.py  engine.py  rules.py  types.py
backend/tests/: conftest.py  test_analytics.py  test_analyze.py  test_detection_custom.py  test_health.py  test_ocr_enhancement.py  test_postprocessor.py  test_preprocessor.py  test_property_evidence.py  test_property_persistence.py  test_property_violation_engine.py  test_storage_service.py  test_upload.py  test_violation_engine.py  test_violations.py
(+38 files in other folders)
