[project]
name = "trafficvision-ai-backend"
version = "1.0.0"
description = "TrafficVision AI — FastAPI backend for traffic violation detection"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "minio==7.2.11",
    "pillow==11.0.0",
    "ultralytics==8.3.43",
    "paddleocr==2.9.1",
    "paddlepaddle==2.6.2",
    "opencv-python-headless==4.10.0.84",
    "python-multipart==0.0.17",
    "python-dotenv==1.0.1",
    "pydantic-settings==2.6.1",
    "setuptools>=70.0.0",
    "facexlib>=0.3.0",
    "gfpgan>=1.3.8",
    "realesrgan>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis==6.119.3",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.0",
]

[tool.uv]
dev-dependencies = [
    "hypothesis==6.119.3",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
